fix: product스키마 구조 변경(기존 category -> main,sub로 분기)
